--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
     "context": "..",
     "dockerfile": "Dockerfile"
   },
-  "runArgs": ["--runtime=nvidia", "--gpus=all"],
+  "runArgs": [],
   "customizations": {
     "vscode": {
       "extensions": [
