--- a/pixi.toml
+++ b/pixi.toml
@@ -1,4 +1,4 @@
-[project]
+[workspace]
 authors = ["Matthew Feickert <matthew.feickert@cern.ch>"]
 channels = ["conda-forge"]
 name = "LLMs-from-scratch"
@@ -17,6 +17,7 @@ tqdm = ">=4.67.1,<5"
 pandas = ">=2.2.3,<3"
 numpy = ">=1.26,<2.1"
 psutil = ">=5.9.5,<7"
+pixi-kernel = ">=0.7.0,<0.8"
 
 [pypi-dependencies]
 # The TensorFlow team unfortunately does not maintain the conda-forge
